--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <div class="katalogDiv">
                          <div class="card">
                               <div class="center">
-                                   <img src="./images/Rectangle 1.pdf" alt="rtgl" />
+                                   <img src="./images/Rectangle 1.svg" alt="rtgl" />
                               </div>
                               <p>
                                    Ковер Electra 8514 серый
@@ -127,7 +127,7 @@
                          </div>
                          <div class="card">
                               <div class="center">
-                                   <img src="./images/Rectangle 2.pdf" alt="rtgl" />
+                                   <img src="./images/Rectangle 2.svg" alt="rtgl" />
                               </div>
                               <p>
                                    Ковер Electra 8514 серый
@@ -138,7 +138,7 @@
                          </div>
                          <div class="card">
                               <div>
-                                   <img src="./images/Rectangle 3.pdf" alt="rtgl" />
+                                   <img src="./images/Rectangle 3.svg" alt="rtgl" />
                               </div>
                               <p>
                                    Ковер Electra 8514 серый
@@ -149,7 +149,7 @@
                          </div>
                          <div class="card">
                               <div>
-                                   <img src="./images/Rectangle 4.pdf" alt="rtgl" />
+                                   <img src="./images/Rectangle 4.svg" alt="rtgl" />
                               </div>
                               <p>
                                    Ковер Electra 8514 серый
@@ -160,7 +160,7 @@
                          </div>
                          <div class="card">
                               <div class="center">
-                                   <img src="./images/Rectangle 5.pdf" alt="rtgl" />
+                                   <img src="./images/Rectangle 5.svg" alt="rtgl" />
                               </div>
                               <p>
                                    Ковер Electra 8514 серый
@@ -171,7 +171,7 @@
                          </div>
                          <div class="card">
                               <div>
-                                   <img src="./images/Rectangle 6.pdf" alt="rtgl" />
+                                   <img src="./images/Rectangle 6.svg" alt="rtgl" />
                               </div>
                               <p>
                                    Ковер Electra 8514 серый
