--- a/index.html
+++ b/index.html
@@ -328,6 +328,43 @@
                     </div>
                </div>
           </div>
+          <div class="background4">
+               <div class="container2">
+                    <div class="contact">
+                         <p>
+                              Связатся с нами 
+                         </p>
+                    </div>
+                    <p class="bottomnav">
+                         © 2023 Все права защищены.   
+                    </p>
+                    <a href="#" class="bottomnav">
+                         О компании
+                    </a>
+                    <a href="#" class="bottomnav">
+                         Продукты
+                    </a>
+                    <a href="#" class="bottomnav">
+                         Продукты
+                    </a>
+                    <a href="#" class="bottomnav">
+                         Новости
+                    </a>
+               </div>
+          </div>
+          <div class="background5">
+               <div class="container3">
+                    <p style="opacity: 0.4;">
+                         Copyright: 2024  
+                    </p>
+                    <p>
+                         О нас
+                    </p>
+                    <p>
+                         Помощь 
+                    </p>
+               </div>
+          </div>
      </div>
 </body>
 
