--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
 
                <div class="header">
                     <img src="./images/logo.svg" alt="logo" class="left abs1" />
-
-                    <img src="./images/menu.svg" alt="menu" class="left menu abs2" />
-                    <a href="#" class="left abs3">
+                    <a href="./catalog.html" class="left menu abs2">
+                         <img src="./images/menu.svg" alt="menu"  />
+                    </a>
+                    <a href="./catalog.html" class="left abs3">
                          Каталог продуктов
                     </a>
 
@@ -321,9 +322,9 @@
                               </div>
                          </div>
                          <div class="group">
-                              <img src="./images/Group1.svg" alt="grp" class="img1"/>
-                              <img src="./images/Group.svg" alt="grp" class="img2"/>
-                              <img src="./images/Group2.svg" alt="grp" class="img3"/>
+                              <img src="./images/Group1.svg" alt="grp" class="img1" />
+                              <img src="./images/Group.svg" alt="grp" class="img2" />
+                              <img src="./images/Group2.svg" alt="grp" class="img3" />
                          </div>
                     </div>
                </div>
@@ -332,11 +333,11 @@
                <div class="container2">
                     <div class="contact">
                          <p>
-                              Связатся с нами 
+                              Связатся с нами
                          </p>
                     </div>
                     <p class="bottomnav">
-                         © 2023 Все права защищены.   
+                         © 2023 Все права защищены.
                     </p>
                     <a href="#" class="bottomnav">
                          О компании
@@ -355,13 +356,13 @@
           <div class="background5">
                <div class="container3">
                     <p style="opacity: 0.4;">
-                         Copyright: 2024  
+                         Copyright: 2024
                     </p>
                     <p>
                          О нас
                     </p>
                     <p>
-                         Помощь 
+                         Помощь
                     </p>
                </div>
           </div>
