--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                          </div>
                          <div class="card">
                               <div>
-                                   <img src="./images/Rectangle 7.pdf" alt="rtgl" />
+                                   <img src="./images/Rectangle 7.svg" alt="rtgl" />
                               </div>
                               <p>
                                    Ковер Electra 8514 серый
@@ -194,7 +194,7 @@
                          </div>
                          <div class="card">
                               <div>
-                                   <img src="./images/Rectangle 8.pdf" alt="rtgl" />
+                                   <img src="./images/Rectangle 8.svg" alt="rtgl" />
                               </div>
                               <p>
                                    Ковер Electra 8514 серый
@@ -205,7 +205,7 @@
                          </div>
                          <div class="card">
                               <div class="center">
-                                   <img src="./images/Rectangle 2.pdf" alt="rtgl" />
+                                   <img src="./images/Rectangle 2.svg" alt="rtgl" />
                               </div>
                               <p>
                                    Ковер Electra 8514 серый
@@ -216,7 +216,7 @@
                          </div>
                          <div class="card">
                               <div>
-                                   <img src="./images/Rectangle 7.pdf" alt="rtgl" />
+                                   <img src="./images/Rectangle 7.svg" alt="rtgl" />
                               </div>
                               <p>
                                    Ковер Electra 8514 серый
@@ -227,7 +227,7 @@
                          </div>
                          <div class="card">
                               <div>
-                                   <img src="./images/Rectangle 4.pdf" alt="rtgl" />
+                                   <img src="./images/Rectangle 4.svg" alt="rtgl" />
                               </div>
                               <p>
                                    Ковер Electra 8514 серый
@@ -238,7 +238,7 @@
                          </div>
                          <div class="card">
                               <div>
-                                   <img src="./images/Rectangle 5.pdf" alt="rtgl" />
+                                   <img src="./images/Rectangle 5.svg" alt="rtgl" />
                               </div>
                               <p>
                                    Ковер Electra 8514 серый
