--- a/catalog.html
+++ b/catalog.html
@@ -4,10 +4,89 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <div class="catalog">
-        catalog
+        <div class="catalogDiv">
+            <div class="catalogHeader">
+                <div>
+                    <a href="#">
+                       <img src="./images/menuDark.svg"/> 
+                    </a>
+                    <div>
+                       <a href="#" class="nav">
+                            Каталог продуктов
+                       </a>
+   
+                       <a href="#" class="nav">
+                            Услуги
+                       </a>
+                       <a href="#" class="nav">
+                            Контакты
+                       </a>
+                    </div>
+                </div>
+                <div class="darklogo">
+                    <img src="./images/logoDark.svg"/>
+                    <img src="./images/Vector.svg" alt="vec" class="vector"/>
+                </div>
+                <div>
+                    <p>
+                        Приём звонков 24/7
+                    </p>
+                    <p>
+                        +998 90 000 00 00
+                    </p>
+                </div>
+            </div>
+            <div class="hr">
+            </div>
+            <div class="catalogMain">
+                <div>
+                    <p>
+                        <span>Главная  <span>///</span></span>
+                        Каталог люстр
+                    </p>
+                    <h1>
+                        Каталог
+                    </h1>
+                    <button class="active1">
+                        Люстры
+                   </button>
+                   <button>
+                        Светильники потолочные
+                   </button>
+                   <button>
+                        Точечные светильники
+                   </button>
+                   <button>
+                        Трековые системы
+                   </button>
+                   <button>
+                        Бра и настенные
+                   </button>
+                   <button>
+                    Торшеры
+               </button>
+               <button>
+                    Настольные лампы
+               </button>
+               <button>
+                    Уличные
+               </button>
+               <button>
+                    Лампы
+               </button>
+               <button>
+                    Акции
+               </button>
+                </div>
+                <div>
+
+                </div>
+            </div>
+        </div> 
     </div>
 </body>
 </html>
