--- a/index.html
+++ b/index.html
@@ -18,62 +18,64 @@
 <body>
      <div class="root">
           <div class="background1">
-
-               <div class="fontop">
-                    <img src="./images/Ellipse 1322.svg" alt="alp" class="fonbottom" />
-               </div>
-
-               <img src="./images/heroImg.svg" alt="hero" class="hero" />
-
-
-               <div class="header">
-                    <img src="./images/logo.svg" alt="logo" class="left abs1" />
-                    <a href="./catalog.html" class="left menu abs2">
-                         <img src="./images/menu.svg" alt="menu"  />
-                    </a>
-                    <a href="./catalog.html" class="left abs3">
-                         Каталог продуктов
-                    </a>
-
-                    <a href="#" class="left abs4">
-                         Услуги
-                    </a>
-                    <a href="#" class="left abs5">
-                         Контакты
-                    </a>
-                    <div class="hug right abs6">
-                         Получить консултацию
+               <div class="backfon">
+                    <div class="fontop">
+                         <img src="./images/Ellipse 1322.svg" alt="alp" class="fonbottom" />
                     </div>
-               </div>
 
-               <div class="main">
-                    <h1 class="abs7">
-                         MORGANA OVAL
+                    <img src="./images/heroImg.svg" alt="hero" class="hero" />
+
+
+                    <div class="header">
+                         <img src="./images/logo.svg" alt="logo" class="left abs1" />
+                         <a href="./catalog.html" class="left menu abs2">
+                              <img src="./images/menu.svg" alt="menu" />
+                         </a>
+                         <a href="./catalog.html" class="left abs3">
+                              
+                                  Каталог продуктов 
+                              
+                         </a>
+
+                         <a href="#" class="left abs4">
+                              Услуги
+                         </a>
+                         <a href="#" class="left abs5">
+                              Контакты
+                         </a>
+                         <div class="hug right abs6">
+                              Получить консултацию
+                         </div>
+                    </div>
+
+                    <div class="main">
+                         <h1 class="abs7">
+                              MORGANA OVAL
+                         </h1>
+                         <p class="abs8">
+                              The question isn't who is going to let me. It's who is going to stop me.
+                         </p>
+                         <div class="abs9 hug1">
+                              Подробнее
+                         </div>
+                    </div>
+                    <h1 class="abs10">
+                         3 200 000.00 UZS
                     </h1>
-                    <p class="abs8">
+                    <p class="abs11">
                          The question isn't who is going to let me. It's who is going to stop me.
                     </p>
-                    <div class="abs9 hug1">
-                         Подробнее
+
+                    <div class="ellipses">
+                         <img src="./images/Ellipse 1.svg" alt="elpp" class="alp1" />
+                         <img src="./images/Ellipse 2.svg" alt="elpp" class="alp2" />
+                         <img src="./images/Ellipse 3.svg" alt="elpp" class="alp3" />
+                         <img src="./images/Ellipse 4.svg" alt="elpp" class="alp4" />
+                         <img src="./images/Ellipse 5.svg" alt="elpp" class="alp5" />
+                         <img src="./images/Ellipse 6.svg" alt="elpp" class="alp6" />
                     </div>
+
                </div>
-               <h1 class="abs10">
-                    3 200 000.00 UZS
-               </h1>
-               <p class="abs11">
-                    The question isn't who is going to let me. It's who is going to stop me.
-               </p>
-
-               <div class="ellipses">
-                    <img src="./images/Ellipse 1.svg" alt="elpp" class="alp1" />
-                    <img src="./images/Ellipse 2.svg" alt="elpp" class="alp2" />
-                    <img src="./images/Ellipse 3.svg" alt="elpp" class="alp3" />
-                    <img src="./images/Ellipse 4.svg" alt="elpp" class="alp4" />
-                    <img src="./images/Ellipse 5.svg" alt="elpp" class="alp5" />
-                    <img src="./images/Ellipse 6.svg" alt="elpp" class="alp6" />
-               </div>
-
-
           </div>
           <div class="background2">
                <div class="container2">
